@@ -155,12 +155,7 @@ module EventsHelper
 
   def event_note_title_html(event)
     if event.note_target
-      link_prefix =
-        if event.note_target.class.name == "Issue"
-          "#"
-        else
-          "!"
-        end
+      link_prefix = event.note_target.class.reference_prefix
 
       if event.note_commit?
         link_to(
@@ -175,11 +170,11 @@ module EventsHelper
         link_to(namespace_project_snippet_path(event.project.namespace,
                                                event.project,
                                                event.note_target)) do
-          "#{event.note_target_type} #{link_prefix}#{truncate event.note_target_id}"
+          "#{event.note_target_type} #{truncate event.note_target.to_reference}"
         end
       else
         link_to event_note_target_path(event) do
-          "#{event.note_target_type} #{link_prefix}#{truncate event.note_target_iid}"
+          "#{event.note_target_type} #{truncate event.note_target.to_reference}"
         end
       end
     else
