@@ -48,7 +48,7 @@
             = note_count
 
   .merge-request-info
-    \#{merge_request.iid} &middot;
+    \#{merge_request.to_reference} &middot;
     opened #{time_ago_with_tooltip(merge_request.created_at, placement: 'bottom')}
     by #{link_to_member(@project, merge_request.author, avatar: false)}
     - if merge_request.target_project.default_branch != merge_request.target_branch
