@@ -2,7 +2,7 @@
   .status-box{ class: status_box_class(@merge_request) }
     = @merge_request.state_human_name
   %span.identifier
-    Merge Request !#{@merge_request.iid}
+    Merge Request #{@merge_request.to_reference}
   %span.creator
     &middot;
     by #{link_to_member(@project, @merge_request.author, size: 24)}
